# android-opencv-opengl-web

./: CMakeLists.txt  README.md
app/: build.gradle  settings.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/app/src/main/java/com/example/opedge/app/src/main/java/com/example/opedge/: GLSurface.kt  MainActivity.kt
app/app/src/main/app/src/main/java/com/example/opedge/app/src/main/java/com/example/opedge/app/src/main/java/com/example/opedge/: GLRenderer.kt
app/app/src/main/app/src/main/java/com/example/opedge/app/src/main/java/com/example/opedge/app/src/main/java/com/example/opedge/app/src/main/java/com/example/opedge/: NativeLib.kt
